--- a/vignettes/EMTscoreData-vignette.Rmd
+++ b/vignettes/EMTscoreData-vignette.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "EMTscoreData Package"
-author: "Your Name"
-output: BiocStyle::html_document
+author: "Haimei Wen"
+output: BiocStyle::html_document     
 vignette: >
   %\VignetteIndexEntry{EMTscoreData Package Vignette}
   %\VignetteEngine{knitr::rmarkdown}
